--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -28,7 +28,8 @@
                 </li>
             <% } else { %>
                 <li class="main-header__item">
-                    <form action="/logout" method="post">
+                    <form action="/logout" method="POST">
+                        <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                         <button type="submit">Logout</button>
                     </form>
                 </li>
@@ -62,7 +63,8 @@
             </li>
         <% } else { %>
             <li class="mobile-nav__item">
-                <form action="/logout" method="post">
+                <form action="/logout" method="POST">
+                    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                     <button type="submit">Logout</button>
                 </form>
             </li>
