--- a/views/user/mymatches.ejs
+++ b/views/user/mymatches.ejs
@@ -30,6 +30,7 @@
                         <div class="card__actions">
                             <a href="/edit-match/<%= match._id %>?edit=true" class="btn">Edit</a>
                             <form action="/delete-match/" method="POST">
+                                <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                                 <input type="hidden" value="<%= match._id %>" name="matchId">
                                 <button class="btn" type="submit">Delete</button>
                             </form>
