--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -7,6 +7,7 @@
    <%- include('../includes/navigation.ejs') %>
     <main>
         <form class="signup-form" action="/signup" method="POST">
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <div class="form-control">
                 <label for="usrName">Nome</label>
                 <input type="string" name="usrName" id="usrName">
