--- a/views/user/edit-match.ejs
+++ b/views/user/edit-match.ejs
@@ -7,6 +7,7 @@
     <%- include('../includes/navigation.ejs') %>
     <main>
         <form class="match-form" action="/<% if (editing) { %>edit-match<% } else { %>add-match<% } %>" method="POST">
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <div class="form-control">
                 <label for="title">Title</label>
                 <input type="text" name="title" id="title" value="<% if (editing) { %><%= match.title %><% } %>">
